--- a/app/assets/stylesheets/Global/Resets.scss
+++ b/app/assets/stylesheets/Global/Resets.scss
@@ -33,7 +33,6 @@ fieldset {
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
 }
