--- a/app/assets/stylesheets/Global/Theme.scss
+++ b/app/assets/stylesheets/Global/Theme.scss
@@ -1,11 +1,16 @@
 /* root */
 body {
   @extend .u-body;
+
   font-family: $font-family, system-ui, sans-serif;
   background-color: $color-background;
-  display: flex;
-  flex-direction: column;
-  overflow-y: scroll;
+
+  @include desktop {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    min-height: 100vh;
+  }
 }
 
 /* typography */
