--- a/app/assets/stylesheets/Shared/Button.scss
+++ b/app/assets/stylesheets/Shared/Button.scss
@@ -6,6 +6,10 @@
   border-radius: 5px;
   text-decoration: none;
   cursor: pointer;
+
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
 }
 
 .Button--action {
