--- a/app/assets/stylesheets/Shared/Phone.scss
+++ b/app/assets/stylesheets/Shared/Phone.scss
@@ -34,6 +34,7 @@
     @include mobile {
       width: 100%;
       height: 100%;
+      overflow-x: hidden;
     }
   }
 }
